--- a/src/fxtarina/TietojaView.fxml
+++ b/src/fxtarina/TietojaView.fxml
@@ -7,7 +7,7 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="tietoja" stylesheets="@tarinatilasto.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="TOP_CENTER" text="Tarinatilasto" underline="true">
+      <Label alignment="TOP_CENTER" text="Story Statistics" underline="true">
          <font>
             <Font name="Bell MT Bold" size="40.0" />
          </font>
@@ -15,18 +15,23 @@
             <Insets bottom="50.0" />
          </VBox.margin>
       </Label>
-      <Label alignment="CENTER" text="Versio 1.0">
+      <Label alignment="CENTER" text="Version 1.2">
          <font>
             <Font name="Arial" size="25.0" />
          </font>
       </Label>
-      <Label alignment="BOTTOM_CENTER" text="Noora Jokela ja Janne Taipalus" textAlignment="CENTER">
+      <Label alignment="BOTTOM_CENTER" text="Code: Noora Jokela and Janne Taipalus" textAlignment="CENTER">
          <font>
             <Font name="Belwe Lt BT Light" size="30.0" />
          </font>
          <VBox.margin>
             <Insets top="50.0" />
          </VBox.margin>
+      </Label>
+      <Label alignment="BOTTOM_CENTER" layoutX="20.0" layoutY="274.0" text="English translation: Noora Jokela" textAlignment="CENTER">
+         <font>
+            <Font name="Belwe Lt BT Light" size="30.0" />
+         </font>
       </Label>
    </children>
 </VBox>
